# lapex

./: .gitignore  Cargo.toml  README.md  main.cpp
example/: sql.lapex  test1.lapex  test10.lapex  test11.lapex  test12.lapex  test13.lapex  test14.lapex  test2.lapex  test3.lapex  test4.lapex  test5.lapex  test6.lapex  test7.lapex  test8.lapex  test9.lapex
lapex/: Cargo.toml
lapex-automaton/: Cargo.toml
lapex-automaton/src/: lib.rs
lapex-cli/: Cargo.toml
lapex-cli/src/: main.rs
lapex-codegen/: Cargo.toml
lapex-codegen/src/: lib.rs  templating.rs
lapex-cpp-codegen/: Cargo.toml
lapex-cpp-codegen/src/: lexer.cpp  lexer.rs  lib.rs  parser.cpp  parser.h  table_parser.rs
lapex-cpp-codegen/src/glr_parser/: mod.rs
lapex-cpp-codegen/src/lexer/: lexer.cpp.tpl  lexer_header.tpl  lexer_impl.tpl  mod.rs  tokens.cpp.tpl  tokens_header.tpl  tokens_impl.tpl
lapex-cpp-codegen/src/ll_parser/: mod.rs  parser.cpp.tpl  parser_header.tpl  parser_impl.h.tpl  parser_impl.tpl  parser_impl_header.tpl  parser_visitor_header.tpl
lapex-cpp-codegen/src/lr_parser/: action_goto.rs  mod.rs  parser.cpp.tpl  parser_impl.h.tpl  parser_impl.tpl  parser_impl_header.tpl  parser_visitor_header.tpl
lapex-input/: Cargo.toml
lapex-input-bootstrap/: Cargo.toml
lapex-input-bootstrap/src/: lib.rs  tests.rs
lapex-input-gen/: Cargo.toml  build.rs
lapex-input-gen/src/: lapex.lapex  lib.rs
lapex-input/src/: lib.rs
lapex-lexer/: Cargo.toml
lapex-lexer/src/: alphabet.rs  codegen.rs  dfa.rs  lib.rs  nfa.rs
lapex-lexer/src/codegen/: cpp.rs  mod.rs
lapex-lexer/src/nfa/: mod.rs  tests.rs
lapex-parser/: Cargo.toml
lapex-parser/src/: bnf.rs  grammar.rs  grammar_builder.rs  lib.rs  tests.rs  util.rs
lapex-parser/src/ll_parser/: codegen.rs  mod.rs  tests.rs
lapex-parser/src/lr_parser/: bidimap.rs  codegen.rs  item.rs  mod.rs
lapex-rust-codegen/: Cargo.toml
lapex-rust-codegen/src/: lib.rs
lapex-rust-codegen/src/glr_parser/: mod.rs
lapex-rust-codegen/src/lexer/: mod.rs
lapex-rust-codegen/src/ll_parser/: mod.rs
lapex-rust-codegen/src/lr_parser/: mod.rs
lapex/src/: errors.rs  lib.rs  main.rs
