[workspace]
members = [
    "lapex",
    "lapex-cli",
    "lapex-input",
    "lapex-input-bootstrap",
    "lapex-input-gen",
    "lapex-automaton",
    "lapex-lexer",
    "lapex-parser",
    "lapex-codegen",
    "lapex-cpp-codegen",
    "lapex-rust-codegen",
]
exclude = [
    "generated/test_parser"
]
resolver = "2"