[package]
name = "lapex-cpp-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
lapex-input = { path = "../lapex-input" }
lapex-automaton = { path = "../lapex-automaton" }
lapex-lexer = { path = "../lapex-lexer" }
lapex-parser = { path = "../lapex-parser" }
