[package]
name = "lapex-rust-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
lapex-codegen = { path = "../lapex-codegen" }
lapex-input = { path = "../lapex-input" }
lapex-automaton = { path = "../lapex-automaton" }
lapex-lexer = { path = "../lapex-lexer" }
lapex-parser = { path = "../lapex-parser" }
quote = "1.0.32"