[package]
name = "lapex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
lapex-automaton = { path = "../lapex-automaton" }
lapex-lexer = { path = "../lapex-lexer" }
lapex-parser = { path = "../lapex-parser" }
lapex-input = { path = "../lapex-input" }
lapex-cpp-codegen = { path = "../lapex-cpp-codegen" }
