[package]
name = "lapex"
version = "0.1.0"
edition = "2021"

[lib]
name = "lapex"
path = "src/lib.rs"

[[bin]]
name = "lapex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.16", features = ["derive"] }
lapex-automaton = { path = "../lapex-automaton" }
lapex-lexer = { path = "../lapex-lexer" }
lapex-parser = { path = "../lapex-parser" }
lapex-input = { path = "../lapex-input" }
lapex-cpp-codegen = { path = "../lapex-cpp-codegen" }
lapex-rust-codegen = { path = "../lapex-rust-codegen" }
lapex-codegen = { path = "../lapex-codegen" }
